# interprocess_by_shared_memory

./: README.md
src/: CMakeLists.txt  remove_shared_memory.cpp  thread1.cpp  thread2.cpp
